--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ li {
 }
 
 .header-section {
-  height: 100vh;
+  min-height: 100vh;
   justify-content: center;
   background-color: blueviolet;
   background-image: url("https://template59995.motopreview.com/mt-demo/59900/59995/mt-content/uploads/2016/10/mt-0617-home-bg-1.jpg");
